# webserver

./: Cargo.toml
scripts/: install.sh  upload.sh
src/: config.rs  handlers.rs  main.rs
src/handlers/: bucket.rs  error.rs  health.rs  image.rs
