[package]
name = "webserver"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-sdk-s3 = "1.76.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-types = "1.3.5"
axum = { version = "0.8.1", features = ["json"] }
axum-macros = "0.5.0"
bytes = "1.10.0"
dotenvy = "0.15.7"
http = "1.2.0"
http-body-util = "0.1.0"
log = "0.4.25"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing-subscriber = "0.3.19"
url = "2.5.4"
validator = { version = "0.20.0", features = ["derive"] }
